<resources>
    <string name="app_name">GiftoWalletLibrary</string>

    <bool name="isTablet">false</bool>

    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Sign out</string>
    <string name="loading">Loading...</string>
    <string name="message">Message</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="copy">Copy</string>
    <string name="transfer">Transfer</string>
    <string name="processing">Processing...</string>

    <string name="title_success">Success</string>
    <string name="title_error">Error</string>

    <string name="msg_please_enter_password">Please, enter passphrase.</string>
    <string name="msg_please_enter_valid_email">Please enter a valid email address.</string>
    <string name="msg_password_not_contain_whitespace">Passphrase must not contain whitespace.</string>
    <string name="msg_invalid_password_whitespace">Invalid passphrase with whitespace. Please, enter a valid one.</string>
    <string name="msg_password_must_have_5_char">Passphrase MUST have at least 5 characters.</string>
    <string name="msg_please_enter_confirm_password">Please enter confirmed passphrase.</string>
    <string name="msg_pass_confirm_pass_not_match">Passphrase and confirmed passphrase do NOT match.</string>

    <string name="get_transaction_list_error">Get transaction list error. Please try again later.</string>
    <string name="msg_please_check_network">Please check your network connection and try again</string>

    <string name="welcome_intro">The cryptocurrency for the global social entertainment industry</string>


    <string name="hello">Hello World, LoadMoreListView!</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="password">Passphrase</string>
    <string name="confirm_password">Confirm Passphrase</string>

    <string name="require_password_intro">Please enter the passphrase to authorize this device</string>
    <string name="passphrase">Passphrase</string>
    <string name="action_continue">Continue</string>
    <string name="no_history">No History</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="note">Note</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="please_enter_amount_to_continue">Please enter amount to continue</string>
    <string name="amount_noti">* Amount must be larger than 0.00001</string>
    <string name="please_enter_amount_password_to_continue">Please enter amount and passphrase to continue</string>
    <string name="note_optional">Note (Optional)</string>

    <string name="no_note">No Note</string>
    <string name="tipping">Tipping</string>
    <string name="home">Home</string>
    <string name="sent_record">Sent Records</string>
    <string name="received_record">Received Records</string>

    <string name="ask_camera_permission">You must allow this application accessing your device\'s camera to scan QR Code</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="balance_not_enough_transfer">Balance is not enough to transfer.</string>
    <string name="password_incorrect">Passphrase is incorrect</string>
    <string name="another_request_being_processed">The another request is being processed. Please request again later.</string>

    <string name="your_request_being_processed">Your request is being processed. It\'ll take a several seconds. Please take a rest.</string>
    <string name="user_identity_missed">User Identity Data is missed</string>
    <string name="update_wallet_success">Successful. It may takes a several seconds to take effect on your wallet balance. Please wait awhile.</string>
    <string name="balance_not_enough_for_updating">Your balance is not enough for updating.</string>
    <string name="error_due_to_network">An error occurred. Please check your network connection and try again.</string>

    <string name="copied">Copied</string>

    <string name="transfer_coin_success">Transferring coins is successful. Your transaction is being processed.</string>
    <string name="please_input_all_require_field">Please input all required fields.</string>
    <string name="amount_condition">Amount must be larger than 0.00001</string>
    <string name="amount_invalid_format">Invalid amount format.</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="who_pay_fee">Transaction Fee (Who is paying)</string>

    <string name="show_wallet_address">Show My Wallet\'s Address</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="to_address">To (Input Wallet\'s address or Scan QR code)</string>
    <string name="your_address">Here is your Wallet\'s address</string>

    <string name="msg_receiver_not_found">Could not find receiver</string>
    
    <string name="msg_name_max_length">Name must not contain more than 15 characters</string>

    <string name="coin_balance">%s Balance</string>

    <string name="msg_dont_have_wallet" formatted="false">You don\'t have a wallet associated with ID \"%s\" yet. Please create to continue.</string>
    <string name="msg_dont_have_coin" formatted="false">Your ID: \"%s\" has an existing wallet with another application with perhaps another token. Would you like to add the new %s token to it?</string>

    <string name="required_information">(*): Required information</string>

    <!-- FingerPrint -->
    <string name="please_enter_password_to_continue">Please enter passphrase to continue.</string>
    <string name="no_fingerprint_enrolled">No fingerprint has enrolled. Please enter passphrase to continue.</string>
    <string name="new_fingerprint_confirm_again">New fingerprint was added to this device. Please confirm fingerprint again to continue.</string>
    <string name="failed_to_authorize">Failed to authorize fingerprint. Please enter passphrase to continue.</string>
    <string name="authorization">Authorization</string>
    <string name="use_password">Use passphrase</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store passphrase to continue</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your passphrase is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>

    <string name="ether_balance">Address Balance:</string>
    <string name="exchange_rate">Exchange Rate:</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_price">Gas Price</string>
    <string name="action_buy">Buy</string>
    <string name="congratulations">Congratulations</string>
    <string name="trade_success_message">Your transaction has been\nbroadcasted to the blockchain</string>
    <string name="trade_success_guide">You can close the app or make a new exchange</string>
    <string name="action_new_exchange">New Exchange</string>
    <string name="kyber_powered">Powered by Kyber Network</string>
    <!-- ============================ -->


    <!-- ============================ -->
    <!-- Switch for each type of coin -->
    <!-- ============================ -->

    <!-- Gifto Wallet - Gifto-->
    <string name="rosecoin_wallet">Gifto Wallet</string>
    <string name="create_rosecoin_wallet">Create Gifto Wallet</string>
    <string name="create_wallet_success">Creating Gifto Wallet successful.</string>
    <string name="create_wallet_exists">You already had Gifto Wallet. Please go back to update your wallet\'s information.</string>
    <string name="create_wallet_fail">Creating Gifto Wallet failed.</string>
    <string name="rosecoin_balance">Gifto Balance</string>
    <string name="transfer_rosecoin">Transfer Gifto</string>
    <string name="tip_rosecoin">Tip Gifto</string>
    <string name="buy_rosecoin">Buy Gifto</string>
    <string name="sell_rosecoin">Sell Gifto</string>
    <string name="refresh_rosecoin_on_blockchain">Refresh Gifto on Blockchain</string>
    <string name="create_wallet_intro">Please fill all information to create Gifto Wallet</string>
    <string name="amount_rosecoin">Amount (Gifto)</string>
    <string name="update_wallet_fail">Update Gifto Wallet\'s information failed</string>
    <!-- ============================ -->


    <!-- Kryptor Wallet - Kryptor-->
    <!--<string name="rosecoin_wallet">Kryptor Wallet</string>-->
    <!--<string name="create_rosecoin_wallet">Create Kryptor Wallet</string>-->
    <!--<string name="create_wallet_success">Creating Kryptor Wallet successful.</string>-->
    <!--<string name="create_wallet_exists">You already had Kryptor Wallet. Please go back to update your wallet\'s information.</string>-->
    <!--<string name="create_wallet_fail">Creating Kryptor Wallet failed.</string>-->
    <!--<string name="rosecoin_balance">Kryptor Balance</string>-->
    <!--<string name="transfer_rosecoin">Transfer Kryptor</string>-->
    <!--<string name="tip_rosecoin">Tip Kryptor</string>-->
    <!--<string name="buy_rosecoin">Buy Kryptor</string>-->
    <!--<string name="sell_rosecoin">Sell Kryptor</string>-->
    <!--<string name="refresh_rosecoin_on_blockchain">Refresh Kryptor on Blockchain</string>-->
    <!--<string name="create_wallet_intro">Please fill all information to create Kryptor Wallet</string>-->
    <!--<string name="amount_rosecoin">Amount (Kryptor)</string>-->
    <!--<string name="update_wallet_fail">Update Kryptor Wallet\'s information failed</string>-->
    <!-- ============================ -->

</resources>
