<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_trade_coin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_line">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:background="@drawable/background_gifto_white_rectangle"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/et_amount_ether"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:paddingBottom="25dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="35sp"
                        android:singleLine="true"
                        android:text="1.23456"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_margin="0.5dp"
                        android:background="@color/edoopad_bg_light_grey">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:text="ETH"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="10sp"
                                android:text="USD 320"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/whispers_red"
                                android:textSize="10sp"
                                android:text="-6.8%"/>

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/arrow_down"
                        android:tint="@color/edoopad_bg_light_grey"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ether_balance"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="125.79 ETH"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="20dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:text="@string/to"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:background="@drawable/background_gifto_white_rectangle">

                    <EditText
                        android:id="@+id/et_amount_gifto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:paddingBottom="25dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="35sp"
                        android:singleLine="true"
                        android:enabled="false"
                        android:text="1234.56"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_margin="0.5dp"
                        android:background="@color/edoopad_bg_light_grey">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:text="GIFTO"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="10sp"
                                android:text="USD 0.106"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/whispers_green"
                                android:textSize="10sp"
                                android:text="+13.07%"/>

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exchange_rate"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="1 ETH = 3000 GIFTO"/>

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/gas_limit"/>

                        <EditText
                            android:id="@+id/et_gas_limit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="10dp"
                            android:inputType="numberDecimal"
                            android:padding="10dp"
                            android:background="@drawable/background_gifto_white_rectangle"
                            android:textSize="15sp"
                            android:text="20000"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:singleLine="true"
                            android:text="@string/gas_price"/>

                        <EditText
                            android:id="@+id/et_gas_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="10dp"
                            android:inputType="numberDecimal"
                            android:padding="10dp"
                            android:background="@drawable/background_gifto_white_rectangle"
                            android:textSize="15sp"
                            android:text="0.2"/>

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:singleLine="true"
                        android:text="@string/transaction_fee"/>

                    <TextView
                        android:id="@+id/tv_transaction_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="0.2 ETH"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/rl_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/edoopad_bg_grey"
            android:layout_above="@+id/btn_trade"/>

        <RelativeLayout
            android:id="@+id/btn_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_whispers_bg_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/action_buy"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/background_black_circle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_white_circle">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="45dp"
                        android:src="@drawable/trade_success"/>

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/congratulations"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/trade_success_message"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/trade_success_guide"/>

            <RelativeLayout
                android:id="@+id/btn_new_exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/btn_whispers_bg_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/action_new_exchange"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>