<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.4"/>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:background="@drawable/white_rounded_background">

        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/edoopad_text_color_price_light_grey"
            android:gravity="center"
            android:text="@string/require_password_intro"/>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/edoopad_text_color_price_light_grey"
                android:text="@string/passphrase"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_password_label"
                android:background="@drawable/background_gifto_white_rectangle">

                <ImageView
                    android:id="@+id/icon_password"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="12.5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/lock_icon"
                    android:visibility="visible"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@+id/icon_password"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:text=""
                    android:singleLine="true"
                    android:hint="@string/passphrase"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:enabled="true"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_whispers_bg_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:textSize="15sp"
                    android:text="@string/action_continue"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>